aks-microsoft-homework.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: B
spec:
  replicas: 1
  selector:
    matchLabels:
      app: B
  template:
    metadata:
      labels:
        app: B
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: B
        image: ghcr.io/azure-samples/aks-store-demo/B:latest
        ports:
        - containerPort: 8080
          name: B
        resources:
          requests:
            cpu: 1m
            memory: 50Mi
          limits:
            cpu: 1000m
            memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: B
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: B
  type: LoadBalancer
